#680 修复样式问题

--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_page.html.twig
@@ -2,7 +2,7 @@
 {% for row in websites %}
         <li class="clearfix">
           <div class="dt">
-            <p class="img"><img src="{{ row.logo_url }}" width="120" height="60" /></p>
+            <p class="img"><img src="{{ row.logo_url }}" width="120"/></p>
             <p class="shop">{{ row.web_name }}</p>
           </div>
           <div class="dd">
