#680 Updated shop redirect

--- a/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_by_the_first_letter.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_by_the_first_letter.html.twig
@@ -3,7 +3,7 @@
     <span class="globGray">按拼音首字母查找：</span>
     <a {% if t == 1 %} class="current" {% endif %} href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'t':1,'q':'','wcat':'-1','p':1})) }}">全部</a>
     <a {% if t == 2 %} class="current" {% endif %} href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'t':2,'q':'','wcat':'-1','p':1})) }}">0~9</a>
-    {% for letter in letters%}
+    {% for letter in range('A', 'Z') %}
     <a {% if t == letter %} class="current" {% endif %} href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'t':letter,'q':'','wcat':'-1','p':1})) }}">{{letter}}</a>
     {% endfor %}
     
