--- a/src/Jili/FrontendBundle/Resources/views/CpsAdvertisement/list_page.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/CpsAdvertisement/list_page.html.twig
@@ -1,6 +1,6 @@
 <ul class="clearfix" style="display:block;">
     {% for key,row in websites %}
-    {% set href_ = path('jili_frontend_cpsadvertisement_redirect')  %}
+    {% set href_ = path('jili_frontend_cpsadvertisement_redirect', {'wid': row.id })  %}
     <li>
     <a class="logoImg" target="_blank" title="{{ row.title }}" href="{{ href_ }}"><img src="/images/website_logos/{{  row.hostHashAsLogoName ~ '.jpg' }}" alt="{{ row.websiteName }}" width="120" height="60"></a>
         {% if row.commission is defined and  row.commission > 0 %}<div class="logoWord lightGray">最高返{{ row.commission }}%</div>{% endif %}
