--- a/src/Jili/FrontendBundle/Resources/views/CpsAdvertisement/list_category.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/CpsAdvertisement/list_category.html.twig
@@ -1,11 +1,12 @@
 {% set wcatid_q = app.request.query.get('wcat','') %}
 <ul class="tabnav">
             
-    <li {% if wcatid_q is not defined or  wcatid_q is empty %} class="active" {% endif %}><a href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'wcat':0,"q":"", "p":1,"t":"" })) }}">热门商家</a></li>
 
-{% for catname,cnt in categories %}
+{% for catname,cnt in categories  if catname != "其他"  %}
+
 
 {% if wcatid_q is defined and wcatid_q == catname  %}
+
     <li class="active"><a href="#" onclick="javascript:return false;">{{ catname}}</a></li>
 {% else %}
     <li><a href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'wcat':catname,"q":"", "p":1 ,"t":""})) }}">{{ catname }}</a></li>
@@ -13,4 +14,10 @@
 
 {% endfor %}
 
+
+{% if wcatid_q is defined and wcatid_q == "其他" %}
+    <li class="active"><a href="#" onclick="javascript:return false;">其他</a></li>
+{% else %}
+    <li><a href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'wcat':"其他","q":"", "p":1 ,"t":""})) }}">其他</a></li>
+{% endif %}
 </ul>
