--- a/src/Jili/FrontendBundle/Resources/views/CpsAdvertisement/detail.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/CpsAdvertisement/detail.html.twig
@@ -72,10 +72,12 @@
       </div>
       {% endif %}
 
+    {% if is_emar_cps %}
+    <!-- {{ detail.adsId }}-->
     <div class="shopRecommend">
-      {{  render( controller("JiliEmarBundle:Product:recommendByWeb",  {'wid': app.request.get('wid') } ) )  }}
+      {{  render( controller("JiliEmarBundle:Product:recommendByWeb",  {'wid': detail.adsId } ) )  }}
     </div>
-
+   {% endif %}
   </div><!-- eof main  -->
 
   <div class="sidebar w154 fr">
