--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -497,7 +497,8 @@ function addClass(id){
                   {% endif %}
               {% endif %}
           </td>
-          <td>{% if item.incentiveType==2 or item.incentiveType == 19 %}
+
+          <td>{% if item.incentiveType==2 or item.incentiveType == 19 or item.incentiveType == 23 %}
                      {% if item.orderStatus > 1 %}
                         {{ item.incentive }}米粒
                      {% else %}
@@ -506,7 +507,7 @@ function addClass(id){
                      {{ item.incentive }}米粒
               {% endif %}</td>
           <td>{{ item.createTime.date | date('Y-m-d')}}</td>
-          <td>{% if item.incentiveType==1 or item.incentiveType==2 or item.incentiveType==17 or item.incentiveType == 19 %}
+          <td>{% if item.incentiveType==1 or item.incentiveType==2 or item.incentiveType==17 or item.incentiveType == 19 or item.incentiveType == 23%}
                   {% if item.orderStatus==1  %} 已参加
                   {% elseif item.orderStatus==2  %} 确认中
                   {% elseif item.orderStatus==3  %} 已完成
