--- a/app/Resources/views/adminBase.html.twig
+++ b/app/Resources/views/adminBase.html.twig
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
-<HEAD>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=utf8">
 <title>{% block title %}积粒网管理{% endblock %}</title>
 
 {% block stylesheets %}
@@ -11,11 +11,9 @@
 {% block javascripts %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 {% endblock %}
-</HEAD>
+</head>
 
-<BODY>
+<body>
 {% block body %}{% endblock %}
 </body>
 </html>
-
-
