admin vote: modify vote show

--- a/src/Jili/BackendBundle/Resources/views/Vote/editConfirm.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Vote/editConfirm.html.twig
@@ -55,7 +55,7 @@
         </tr>
         <tr>
             <td>{{form_label(form.description)}}</td>
-            <td>{{form.description.vars.value|nl2br}}</td>
+            <td>{% autoescape false %}{{form.description.vars.value }}{% endautoescape %}</td>
         </tr>
         <tr>
             <td>{{form_label(form.voteImage)}}</td>
