--- a/web/css/component/survey.css
+++ b/web/css/component/survey.css
@@ -112,7 +112,7 @@
 .vote li.vote-new .tips {
   position: absolute;
   z-index: 1000;
-  top: 30px;
+  top: 42px;
   right: 0px;
 }
 .vote li.vote-new .tips span {
@@ -127,18 +127,33 @@
 .vote li.vote-new .tips-con {
   position: absolute;
   z-index: 1999;
-  top: 12px;
-  right: 3px;
-  border: 1px solid #dedddc;
-  background: #f5f5f5;
-  padding: 8px;
-  width: 110px;
-  line-height: 20px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 0px 1px #dedddc;
-  -moz-box-shadow: 0px 0px 1px #dedddc;
-  box-shadow: 0px 0px 1px #dedddc;
+  top: -40px;
+  right: -3px;
+  padding-bottom: 10px;
+  width: 270px;
   display: none;
+}
+.vote li.vote-new .tips-con p {
+  padding-left: 5px;
+  line-height: 32px;
+  background: #fff;
+  border: 1px solid #dedddc;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 2px 0px #f2f2f2;
+  -moz-box-shadow: 0px 2px 0px #f2f2f2;
+  box-shadow: 0px 2px 0px #f2f2f2;
+}
+.vote li.vote-new .tips-con b {
+  position: absolute;
+  z-index: 1999;
+  bottom: 1px;
+  right: 0;
+  width: 9px;
+  height: 10px;
+  background: url(../img/common/icons_arrow.png) right bottom no-repeat;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
 
 .vote-img {
@@ -153,10 +168,6 @@
   -moz-transition: width 300ms;
   -webkit-transition: width 300ms;
   -o-transition: width 300ms;
-  overflow: hidden;
-  -ms-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 .vote-txt p {
   padding-left: 3px;
@@ -180,7 +191,7 @@
   font-size: 20px;
   position: absolute;
   z-index: 1000;
-  top: 30px;
+  top: 42px;
   right: 20px;
   height: 52px;
   line-height: 52px;
