--- a/web/css/home.css
+++ b/web/css/home.css
@@ -119,15 +119,20 @@ body {
 }
 
 .header-top-con a {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
+  padding: 0 15px;
+  border-right: 1px solid #77777a;
+}
+.header-top-con a.first {
+  padding-left: 0;
+}
+.header-top-con a.last {
+  border-right: none;
 }
 .header-top-con em {
   width: 20px;
   height: 15px;
   line-height: 15px;
-  margin-right: 8px;
+  margin-left: 15px;
   margin-top: -3px;
   background: url(../img/common/icons_common.png) no-repeat 0 0;
   vertical-align: middle;
@@ -142,9 +147,13 @@ body {
   background-position: 0 -38px;
 }
 .header-top-con em.mail {
+  margin-top: 1px;
+  margin-left: 0;
   background-position: 0 -20px;
   position: relative;
   z-index: 1;
+  cursor: pointer;
+  *margin-top: 8px;
 }
 .header-top-con em .mark {
   position: absolute;
@@ -154,27 +163,26 @@ body {
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: #ff5500;
+  background: url(../img/common/icons_common.png) no-repeat 0 -58px;
 }
 .header-top-con span {
-  color: #77777a;
-  padding: 0 15px;
   vertical-align: top;
 }
 .header-top-con span.special {
   color: #fff;
-  padding: 10px 15px 10px 10px;
   position: relative;
   z-index: 10;
-  cursor: pointer;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
-.header-top-con span label {
-  vertical-align: top;
+.header-top-con span .expand-title {
+  padding: 1px 20px 1px 0;
 }
 .header-top-con span b {
   position: absolute;
   z-index: 1000;
-  top: 15px;
+  top: 14px;
   right: 0;
   margin-left: 5px;
   width: 0;
@@ -197,7 +205,7 @@ body {
 .header-top-con .personal {
   position: absolute;
   z-index: 9999;
-  top: 33px;
+  top: 30px;
   right: 0;
   border: 1px solid #eee;
   background: #fff;
@@ -211,7 +219,11 @@ body {
   padding: 0 20px;
 }
 .header-top-con .personal li a {
+  border-right: none;
   color: #4d4d4d;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
 .header-top-con .personal li:hover {
   background: #fafafa;
@@ -237,9 +249,6 @@ body {
 }
 .header-top-con .personal-con span.txt .nickname {
   margin-bottom: 5px;
-}
-.header-top-con .personal-con span label {
-  vertical-align: top;
 }
 .header-top-con .personal-con span strong {
   font-size: 16px;
@@ -480,7 +489,7 @@ body {
 .vote li.vote-new .tips {
   position: absolute;
   z-index: 1000;
-  top: 30px;
+  top: 42px;
   right: 0px;
 }
 .vote li.vote-new .tips span {
@@ -495,18 +504,33 @@ body {
 .vote li.vote-new .tips-con {
   position: absolute;
   z-index: 1999;
-  top: 12px;
-  right: 3px;
-  border: 1px solid #dedddc;
-  background: #f5f5f5;
-  padding: 8px;
-  width: 110px;
-  line-height: 20px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 0px 1px #dedddc;
-  -moz-box-shadow: 0px 0px 1px #dedddc;
-  box-shadow: 0px 0px 1px #dedddc;
+  top: -40px;
+  right: -3px;
+  padding-bottom: 10px;
+  width: 270px;
   display: none;
+}
+.vote li.vote-new .tips-con p {
+  padding-left: 5px;
+  line-height: 32px;
+  background: #fff;
+  border: 1px solid #dedddc;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 2px 0px #f2f2f2;
+  -moz-box-shadow: 0px 2px 0px #f2f2f2;
+  box-shadow: 0px 2px 0px #f2f2f2;
+}
+.vote li.vote-new .tips-con b {
+  position: absolute;
+  z-index: 1999;
+  bottom: 1px;
+  right: 0;
+  width: 9px;
+  height: 10px;
+  background: url(../img/common/icons_arrow.png) right bottom no-repeat;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
 
 .vote-img {
@@ -521,10 +545,6 @@ body {
   -moz-transition: width 300ms;
   -webkit-transition: width 300ms;
   -o-transition: width 300ms;
-  overflow: hidden;
-  -ms-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 .vote-txt p {
   padding-left: 3px;
@@ -548,7 +568,7 @@ body {
   font-size: 20px;
   position: absolute;
   z-index: 1000;
-  top: 30px;
+  top: 42px;
   right: 20px;
   height: 52px;
   line-height: 52px;
