--- a/web/sass/exchangeFlow.scss
+++ b/web/sass/exchangeFlow.scss
@@ -38,8 +38,75 @@
 			}
 		}
 		span{
-			&.cur{
+			&.cur, &.option{
 				@include dib();
+			}
+			&.option{
+				position: relative;
+				z-index: 1;
+				margin-right: 8px;
+				width: 70px;
+				text-align: center;
+				background: #f1f1f1;
+				cursor: pointer;
+				.points{
+					position: absolute;
+					z-index: 1000;
+					top: 50%;
+					left: 50%;
+					width: 0;
+					height: 0;
+					font-size: 0;
+					color: #fff;
+					background: $main-color;
+					@include transition(all, 300ms);
+				}
+				&:hover, &.active{
+					.points{
+						top: 0;
+						left: 0;
+						font-size: 12px;
+						width: 70px;
+						height: 34px;
+					}
+				}
+			}
+			&.about{
+				position: relative;
+				z-index: 1;
+				color: #9192a6;
+				&>b{
+					margin-right: 3px;
+					font-size: 12px;
+					@include tips();
+				}
+				.expand-con{
+					position: absolute;
+					z-index: 1000;
+					top: 25px;
+					left: 8px;
+					width: 420px;
+					padding-top: 10px;
+					display: none;
+					b.arrow{
+						position: absolute;
+						z-index: 1999;
+						top: 1px;
+						left: 0;
+						width: 9px;
+						height: 10px;
+						background: url(../img/exchange/icons_arrow.png) top left no-repeat;
+						@include dib();
+					}
+				}
+				p{
+					padding: 10px 15px;
+					line-height: 20px;
+					color: #666;
+					background: #fcf5eb;
+					border: 1px solid #fdb558;
+					border-radius: 3px;
+				}
 			}
 		}
 		a{
