--- a/web/css/layout/header.css
+++ b/web/css/layout/header.css
@@ -46,6 +46,11 @@
 .header-top a:hover {
   color: #fff;
 }
+.header-top a.mailLink {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+}
 
 .header-top-con a {
   padding: 0 15px;
