--- a/src/Wenwen/FrontendBundle/Resources/views/Test/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Test/index.html.twig
@@ -13,12 +13,11 @@
 {% endblock %}
 
 {% block body %}
-<div class="main-con-left w1000">
-    <div class="vote vote-sub">
-        <em></em>
-        <h1>Test</h1>
-        <p >Test</p>
-    </div>
+<div class="main">
+	<div class="main-con w1000 clearfix">
+		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
+		<div class="main-con-right right"><div>右侧</div></div>
+	</div>
 </div>
 <script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/home')}}"></script>
 {% endblock %}
