--- a/src/Wenwen/FrontendBundle/Resources/views/headerSimple.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/headerSimple.html.twig
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="header-nav">
         <div class="header-nav-con w1000 clearfix">
-            <div class="logo left"><a href="../home/home.html" title="91问问调查网logo"><img src="../../web/img/common/logo.png" alt="91问问调查网logo"></a><span>用户<b>注册</b></span></div>
+            <div class="logo left"><a href="../home/home.html" title="91问问调查网logo"><img src="{{ asset('img/common/logo.png') }}" alt="91问问调查网logo"></a><span>用户<b>注册</b></span></div>
             <p class="nav right"><span>已有91问问账号？</span><a href="../home/index.html">马上登录</a></p>
         </div>
     </div>
