帮助中心 关于我们 调查工具 问卷 添加模板文件

--- a/web/sass/help.scss
+++ b/web/sass/help.scss
@@ -19,6 +19,7 @@
 			margin-bottom: -1px;
 			border-bottom: $block-border;
 			@include dib();
+			cursor: pointer;
 			&.active, &:hover{
 				color: $main-color;
 				font-weight: bold;
