--- a/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
@@ -2,7 +2,7 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/feedback.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
@@ -14,9 +14,14 @@
 
 {% block body %}
 <div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
+	{% include 'WenwenFrontendBundle:Help:banner.html.twig' %}
+	<div class="main-help-con w1000">
+		<div class="main-help-feedback">
+			<div class="finished">
+				<p>感谢您的意见，我们的客服小问将根据您的问题，在24小时内联系您。</p>
+				<a href="../home/home.html">返回首页></a>
+			</div>
+		</div>
 	</div>
 </div>
 <script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
